<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".MainActivity">

    <android.support.constraint.Guideline
        android:id="@+id/game_stats_guideline_1v"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05" />

    <android.support.constraint.Guideline
        android:id="@+id/game_stats_guideline_2v"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <android.support.constraint.Guideline
        android:id="@+id/game_stats_guideline_3v"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95" />

    <android.support.constraint.Guideline
        android:id="@+id/game_stats_guideline_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.03" />

    <TextView
        android:id="@+id/resultsConstantTextView"
        android:layout_height="0dp"
        android:layout_width="0dp"
        android:gravity="center"
        android:text="@string/results"
        android:textSize="60sp"
        app:layout_constraintStart_toStartOf="@+id/game_stats_guideline_1v"
        app:layout_constraintEnd_toEndOf="@+id/game_stats_guideline_3v"
        app:layout_constraintTop_toTopOf="@id/game_stats_guideline_1"
        app:layout_constraintBottom_toTopOf="@id/game_stats_guideline_2" />

    <android.support.constraint.Guideline
        android:id="@+id/game_stats_guideline_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.15" />

    <android.support.constraint.Guideline
        android:id="@+id/game_stats_guideline_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.2" />

    <android.support.constraint.Guideline
        android:id="@+id/game_stats_guideline_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.44" />

    <TextView
        android:id="@+id/totalTimeConstantTextView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="left"
        android:text="@string/total_time"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="@+id/game_stats_guideline_1v"
        app:layout_constraintEnd_toEndOf="@+id/game_stats_guideline_2v"
        app:layout_constraintTop_toTopOf="@id/game_stats_guideline_4"
        app:layout_constraintBottom_toTopOf="@id/game_stats_guideline_5" />

    <TextView
        android:id="@+id/totalTimeTextView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="right"
        android:text="12:34"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="@+id/game_stats_guideline_2v"
        app:layout_constraintEnd_toEndOf="@+id/game_stats_guideline_3v"
        app:layout_constraintTop_toTopOf="@id/game_stats_guideline_4"
        app:layout_constraintBottom_toTopOf="@id/game_stats_guideline_5" />

    <android.support.constraint.Guideline
        android:id="@+id/game_stats_guideline_5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.52" />

    <TextView
        android:id="@+id/totalMovesConstantTextView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="left"
        android:text="@string/total_moves"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="@+id/game_stats_guideline_1v"
        app:layout_constraintEnd_toEndOf="@+id/game_stats_guideline_2v"
        app:layout_constraintTop_toTopOf="@id/game_stats_guideline_5"
        app:layout_constraintBottom_toTopOf="@+id/game_stats_guideline_6" />

    <TextView
        android:id="@+id/totalMovesTextView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="right"
        android:text="99"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="@+id/game_stats_guideline_2v"
        app:layout_constraintEnd_toEndOf="@+id/game_stats_guideline_3v"
        app:layout_constraintTop_toTopOf="@+id/game_stats_guideline_5"
        app:layout_constraintBottom_toTopOf="@+id/game_stats_guideline_6" />


    <android.support.constraint.Guideline
        android:id="@+id/game_stats_guideline_6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.6" />



    <android.support.constraint.Guideline
        android:id="@+id/game_stats_guideline_7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.61" />

    <Button
        android:id="@+id/shareOnFbButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:enabled="false"
        android:text="@string/share_on_fb"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="@+id/game_stats_guideline_1v"
        app:layout_constraintEnd_toEndOf="@+id/game_stats_guideline_3v"
        app:layout_constraintTop_toTopOf="@id/game_stats_guideline_7"
        app:layout_constraintBottom_toTopOf="@id/game_stats_guideline_8" />

    <android.support.constraint.Guideline
        android:id="@+id/game_stats_guideline_8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.71" />

    <android.support.constraint.Guideline
        android:id="@+id/game_stats_guideline_9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.74" />

    <Button
        android:id="@+id/playAgainButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/play_again"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="@+id/game_stats_guideline_1v"
        app:layout_constraintEnd_toEndOf="@+id/game_stats_guideline_3v"
        app:layout_constraintTop_toTopOf="@id/game_stats_guideline_9"
        app:layout_constraintBottom_toTopOf="@id/game_stats_guideline_10" />

    <android.support.constraint.Guideline
        android:id="@+id/game_stats_guideline_10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.84" />

    <android.support.constraint.Guideline
        android:id="@+id/game_stats_guideline_11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.87" />

    <Button
        android:id="@+id/mainMenuButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/main_menu"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="@+id/game_stats_guideline_1v"
        app:layout_constraintEnd_toEndOf="@+id/game_stats_guideline_3v"
        app:layout_constraintTop_toTopOf="@id/game_stats_guideline_11"
        app:layout_constraintBottom_toTopOf="@id/game_stats_guideline_12" />

    <android.support.constraint.Guideline
        android:id="@+id/game_stats_guideline_12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.97" />

    <android.support.constraint.Guideline
        android:id="@+id/game_stats_guideline_13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.4" />

    <android.support.constraint.Guideline
        android:id="@+id/game_stats_guideline_14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.3" />

    <TableLayout
        android:id="@+id/resultsTableLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:stretchColumns="*"
        app:layout_constraintStart_toStartOf="@+id/game_stats_guideline_1v"
        app:layout_constraintEnd_toEndOf="@+id/game_stats_guideline_3v"
        app:layout_constraintTop_toTopOf="@id/game_stats_guideline_3"
        app:layout_constraintBottom_toTopOf="@id/game_stats_guideline_13"/>

</androidx.constraintlayout.widget.ConstraintLayout>