<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical">

    <HorizontalScrollView
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:fadeScrollbars="false">

        <LinearLayout
            android:id="@+id/game_scores"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        </LinearLayout>
    </HorizontalScrollView>

    <HorizontalScrollView
        android:layout_height="match_parent"
        android:layout_width="match_parent">

        <ScrollView
            android:id="@+id/game_view_holder"
            android:layout_height="match_parent"
            android:layout_width="wrap_content">
        </ScrollView>

    </HorizontalScrollView>

</LinearLayout>