...
        app:layout_constraintTop_toBottomOf="@id/nameTextView"
        app:layout_constraintBottom_toTopOf="@id/runNewGameButton"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/startNewGameButton"
        android:text="@string/new_game"
        android:textSize="30sp"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent=".15"
        app:layout_constraintTop_toBottomOf="@id/continueButton"
...
